--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,5 @@
-1.0.2 2020-06-28
-  - Corrected relevant papers in README
-1.0.1 2020-06-28
-  - NIfTI files are now showing up in file list after being removed from .gitignore
+Revision history for Monash REST PET Dataset
 
-1.0.0	2020-06-29
+1.0.0 2020-06-05
 
-	- Initial snapshot
+ - Initialised dataset
